--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             </div>
         </div>
     </main>
-    
+
+    <script src="./js/components/sum.js" type="module" defer></script>
+    <script src="./js/main.js" type="module" defer></script>
 </body>
 
 </html>
