--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 </head>
 
 <body>
+    <!-- SCRIPT: 3rd-party : pvz FB likes...-->
     <main class="container">
         <div class="row">
             <div>
-                <h1>Kaip gaminami blynai</h1> 
+                <h1 id="title">Kaip gaminami blynai</h1> 
                 <p>Šitie blynai patys skaniausi!</p>
             </div>
         </div>
