--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
     </main>
 
-    <script src="./js/main.js" type="module" defer></script>
+    <script src="./js/style.js" type="module" defer></script>
 </body>
 
 </html>
