--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="column">
                 <h2>Ingredientai</h2>
-                <ul>
+                <ul class="list">
                     <li>Miltai</li>
                     <li>Druska</li>
                     <li>Vanduo</li>
@@ -36,7 +36,7 @@
             </div>
             <div class="column">
                 <h2>Įranga/įrankiai</h2>
-                <ul>
+                <ul class="list">
                     <li>Mikseris</li>
                     <li>Keptuvė</li>
                     <li>Šaukštas</li>
@@ -46,7 +46,7 @@
         </div>
     </main>
 
-    <script src="./js/style.js" type="module" defer></script>
+    <script src="./js/components/content.js" type="module" defer></script>
 </body>
 
 </html>
