--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <p>Šitie blynai patys skaniausi!</p>
             </div>
         </div>
-        <div class="row">
-            <div class="column">
+        <div id="content" class="row">
+            <!-- <div class="column">
                 <h2>Ingredientai</h2>
                 <ul class="list">
                     <li>Miltai</li>
@@ -42,11 +42,40 @@
                     <li>Šaukštas</li>
                     <li>Lėkštė</li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </main>
 
-    <script src="./js/components/content.js" type="module" defer></script>
+    <script src="./js/components/content2.js" type="module" defer></script>
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+<div class="row">
+    <div class="column">
+        <div class="title"></div>
+        <div class="list"></div>
+    </div>
+    <div class="column">
+        <div class="title"></div>
+        <div class="list"></div>
+    </div>
+</div>
+<div class="row">
+    <div class="column">
+        <div class="title"></div>
+        <div class="list"></div>
+    </div>
+    <div class="column">
+        <div class="title"></div>
+        <div class="list"></div>
+    </div>
+</div>
