--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
                     <li>Lėkštė</li>
                 </ul>
             </div> -->
+            <!-- <div class="column">
+                <h2>Ingredientai</h2>
+                <ul class="list">
+                    <li>Miltai</li>
+                    <li>Druska</li>
+                    <li>Vanduo</li>
+                    <li>Kiaušiniai</li>
+                </ul>
+            </div>
+            <div class="column">
+                <h2>Įranga/įrankiai</h2>
+                <ul class="list">
+                    <li>Mikseris</li>
+                    <li>Keptuvė</li>
+                    <li>Šaukštas</li>
+                    <li>Lėkštė</li>
+                </ul>
+            </div> -->
         </div>
     </main>
 
